--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="CSS/bootstrap.min.css">
     <link rel="stylesheet" href="CSS/index.css">
-    <title>Document</title>
+    <title>Quotes App</title>
 </head>
 <body>
     <div class="text-center position-absolute start-50 top-50 translate-middle">
